<resources>
    <string name="app_name">GoodBudget</string>

    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_home">Home</string>
    <string name="title_activity_add_envelope">AddEnvelope</string>
    <string name="title_activity_edit_envelope">EditEnvelope</string>
    <string name="title_activity_income">Income</string>
    <string name="title_activity_main2">MainActivity2</string>
    <string name="title_activity_envelopes">Envelopes</string>
    <string name="title_activity_reports">Reports</string>
    <string name="title_activity_accounts">Accounts</string>
    <string name="title_activity_add_transaction">AddTransaction</string>
    <string name="title_activity_fill_envelope">FillEnvelope</string>
    <string name="title_activity_fragment_parent">FragmentParent</string>
    <string name="open_drawer">Drawer Opened</string>
    <string name="closed_drawer">Drawer Closed</string>

    <!-- Navigation Menu -->
    <string name="nav_home">Home Menu</string>
    <string name="nav_envelopes_fill">Envelopes Fill</string>
    <string name="nav_envelopes_transfer">Envelopes Transfer</string>
    <string name="nav_edit_envelopes">Edit Envelopes</string>
    <string name="nav_help">Help</string>
    <string name="nav_settings">Settings</string>
    <string name="title_activity_fill_envelope2">FIllEnvelope2</string>
    <string name="title_activity_fill3">FillActivity3</string>
    <string name="title_activity_fill_envelope3">FillEnvelope3</string>
</resources>
